fixed z-index cross issue for hovered elem within Process component

--- a/src/Components/Process/Process.scss
+++ b/src/Components/Process/Process.scss
@@ -186,7 +186,7 @@
 
   &_maximizedzindexonhover {
     &:hover {
-      z-index: 10000;
+      z-index: 8000;
     }
   }
 
